--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
@@ -5,7 +5,7 @@ nav_order: 2
 parent: 'Exercise 02: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
 ---
 
-# Task 02 - Create and store vector embeddings (30 minutes)
+# Task 02 - Create and store vector embeddings (45 minutes)
 
 ## Introduction
 
@@ -75,12 +75,13 @@ The key tasks are as follows:
 
 - The steps to review the function app are as follows:
   - Open the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder.
-  - Locate the `Run` function starting on line 43 and examine the code contained within it.
-    - The code on line 50 reduces the list of documents sent to the function to only those that do not have a `Type` of "Vectorized". This prevents the updates pushed by the function back to the `MaintenanceRequests` container from being revectorized by the function.
+  - The `DatabaseName` and `ContainerName` constants defined on lines 16 and 17 refer to the Azure Cosmos DB database created by the Bicep script and the container you created in task 1 of this exercise, respectively. If those values differ in your environment, the values assigned to the constants must be updated to reflect what is in your environment.
+  - Locate the `Run` function starting on line 42 and examine the code contained within it.
+    - The code on line 49 reduces the list of documents sent to the function to only those that do not have a `Type` of "Vectorized". This prevents the updates pushed by the function back to the `MaintenanceRequests` container from being revectorized by the function.
     - If there are no documents that require vectorization, the function will exit without making any changes to the input documents.
-    - The `foreach` loop starting on line 53 iterates through each document in the change feed that requires the text in its `details` field to be vectorized. The `details` text is sent to Azure OpenAI to create vector embeddings using the deployment for the `text-embedding-ada-002` model. The returned vector embeddings are saved into the `RequestVector` field of the document.
+    - The `foreach` loop starting on line 52 iterates through each document in the change feed that requires the text in its `details` field to be vectorized. The `details` text is sent to Azure OpenAI to create vector embeddings using the deployment for the `text-embedding-ada-002` model. The returned vector embeddings are saved into the `RequestVector` field of the document.
     - The document's `Type` field is set to "Vectorized".
-    - On line 73, the list of input documents is returned, which used the Cosmos DB output binding to write the updated documents back into the `MaintenanceRequests` container.
+    - On line 72, the list of input documents is returned, which uses the Cosmos DB output binding to write the documents updated with vector embeddings back into the `MaintenanceRequests` container in Cosmos DB.
 
 - To create a `local.settings.json` file, navigate to the `src/ContosoSuitesVectorizationFunction` directory, create a new file named `local.settings.json`, and add the following content, replacing the bracketed tokens with values from your Azure OpenAI and Azure Cosmos DB services.
 
@@ -93,9 +94,7 @@ The key tasks are as follows:
         "AzureOpenAIEndpont": "[YOUR_AZURE_OPENAI_ENDPOINT]",
         "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
         "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
-        "DeploymentName": "text-embedding-ada-002",
-        "DatabaseName": "ContosoSuites",
-        "ContainerName": "MaintenanceRequests"
+        "DeploymentName": "text-embedding-ada-002"
       }
     }
     ```
@@ -106,23 +105,23 @@ The key tasks are as follows:
     - Copy the value of **KEY 1** and paste it into the `AzureOpenAIKey` value of the `local.settings.json` file.
     - Copy the value of **Endpoint** and paste it into the `AzureOpenAIEndpoint` value.
 
-      ![](0202-azure-openai-keys-and-endpoint.png)
+      ![The Azure OpenAI Keys and Endpoint page is displayed, with the copy buttons for KEY 1 and Endpoint highlighted.](0202-azure-openai-keys-and-endpoint.png)
 
   - Return to your resource group and select the Azure Cosmos DB resource.
     - Under the **Settings** menu, select **Keys**, then show and copy the **PRIMARY CONNECTION STRING** value and paste it as the `CosmosDBConnectionString` value in the `local.settings.json` file.
   
-      ![](0202-azure-cosmos-db-keys.png)
+      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](0202-azure-cosmos-db-keys.png)
 
-  - The `DeploymentName` and `DatabaseName` values are preset, based on the values added by the Bicep script. The  `ContainerName` value is preset based on the container you created in the previous task. If any of these values differ in your environment, you will need to update these settings accordingly.
+  - The `DeploymentName` value is preset, based on the deployment created by the Bicep script. If that value differs in your environment, you will need to update this settings accordingly.
 
 - To test the function locally:
-  - Open the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder.
-  - Set breakpoints on lines 50, 63, and 73, so you can examine the values of the `documentsToVectorize`, `task.RequestVector`, and `input` as you step through the function.
   - Open a new terminal windows in Visual Studio Code and change the path to the `src/ContosoSuitesVectorizationFunction` folder.
-  - Return to the `CosmosChangeFeedVectorization.cs` file and then Select **F5** on your keyboard to start a debug session.
+  - Open the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder.
+  - Set a breakpoint on line 50 so you can examine the values of the `documentsToVectorize`, `task.RequestVector`, and `input` as you step through the function.
+  - Select **F5** on your keyboard to start a debug session in Visual Studio Code. In the terminal window created, wait until the function has started.
   - In a browser window, open the [Azure portal](https://portal.azure.com/) and navigate to your Cosmos DB account.
   - On the Azure Cosmos DB account page, select **Data Explorer** from the left-hand menu, expand the **ContosoSuites** database and the **MaintenanceRequests** container, and select **Items** under the container.
-  - Insert the following document into the `MaintenanceRequests` container and observe the results of the function execution as your breakpoints are hit.
+  - Select **New item** on the toolbar, then paste the following document into the window that appears.
 
     ```json
     {
@@ -135,30 +134,35 @@ The key tasks are as follows:
     }
     ```
 
+  - Select **Save** on the toolbar to insert the document into the `MaintenanceRequests` container:
+  - Return to Visual Studio Code and wait for your breakpoint to be hit.
+  - Observe the values of the `documentsToVectorize`, `task.RequestVector`, and `input` variables as you step through the code (F11), allowing the function to run completely.
+  - Return to the Cosmos DB **Data Explorer** in the Azure portal and select the document that was inserted into the `MaintenanceRequests` container. Inspect the `request_vector` property to review the structure of the generated vector embeddings. Also, note the `type` field has been set to "Vectorized."
+  - Return to Visual Studio Code and select "Shift+F5" on the keyboard to stop the function app debug session.
+
+**TODO**:
+
+1. Write steps for deploying the function app, then uploading the `PropertyMaintenance.json` file in Cosmos Data Explorer and looking at the logs and data in Cosmos.
+2. Write steps for executing a `VectorDistance()` query in the Data Explorer.
+
 - To deploy the function to Azure:
-  - Configure app settings by uploading the `local.settings.json` file to the Azure Function...
+  - TODO: Configure app settings by uploading the `local.settings.json` file to the Azure Function...
 
-- The steps to generate vector embeddings using Azure OpenAI are:
-  - Navigate the your Azure OpenAI resource in the [Azure portal](https://portal.azure.com/).
-  - Expand the **Resource Management** menu item in the left-hand menu and select **Keys and Endpoint**.
-  - Copy the **Endpoint** and **KEY 1** values.
-
-- The Azure Cosmos DB Data Explorer can be used to upload the `PropertyMaintenance.json` data file provided by Contoso Suites.
+- To upload the `PropertyMaintenance.json` data file provided by Contoso Suites and bulk insert maintenance requests into the `MaintenanceRequests` container in your Azure Cosmos DB, use the Data Explorer.
   - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource and select **Data Explorer** in the left-hand menu.
   - In the Data Explorer, expand the **ContosoSuites** database and the **MaintenanceRequests** container, then select **Items**.
 
-    ![Data Explorer is highlighted in the left-hand menu. The expand icon is highlighted for the database and UserReviews containers. Items is highlighted.](../../media/Solution/0201-azure-cosmos-db-data-explorer-user-reviews-items.png)
+    ![Data Explorer is highlighted in the left-hand menu. The expand icon is highlighted for the database and MaintenanceRequests containers. Items is highlighted.](../../media/Solution/0202-azure-cosmos-db-data-explorer-maintenance-requests-items.png)
 
   - Select **Upload Item** on the toolbar.
 
     ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0201-azure-cosmos-db-toolbar-upload-item.png)
 
-  - In the **Upload Items** dialog, select the browse button and navigate to the `UserReviews.json` file in the `/src/data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
+  - In the **Upload Items** dialog, select the browse button and navigate to the `PropertyMaintenance.json` file in the `/src/data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
 
-    ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0201-upload-items-user-reviews.png)
-
-  - Repeat the above steps, this time uploading data into the `MaintenanceRequests` container from the `PropertyMaintenance.json` file.
+    ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0202-upload-items-property-maintenance.png)
 
 - After ingestion and processing is complete, you can ask questions of the uploaded dataset.
+  - TODO: Write steps for creating a new query in the data explorer, pasting a query that uses the vector distance function, and review the output.
 
 </details>
